[project]
name = "tab-ddpm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "category-encoders>=2.9.0",
    "dython>=0.7.11",
    "icecream>=2.1.8",
    "numpy>=2.3.4",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "skorch>=1.2.0",
    "tqdm>=4.67.1",
]
